--- a/starbucks/index.html
+++ b/starbucks/index.html
@@ -1,31 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>starbucks1</title>
+	<title>starbucks</title>
 	<meta charset="utf-8">
 	<meta name="author" content="pixelhint.com">
 	<meta name="description" content="Minima is a minimal, clean HTML5 multi-purpose template, well-coded & commented code"/>
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <script type="text/javascript" src="js/jquery.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
+    <script src="js/jquery.js"></script>
+    <script src="js/main.js"></script>
 		<script src="video.js"></script>
 </head>
 <body>
 
 	<header>
-
 		<div class="wrapper">
-			<a href="#" class="logo"> <img src="img/logo_star.png" alt="" title="starbucks"/> </a>
+			<h1><a href="#" class="logo"><img src="img/logo_star.png" alt="" title="starbucks"/></a></h1>
 			<nav>
 				<ul>
-					<li><a href="#">COFFEE</a></li>
-					<li><a href="#">MENU</a></li>
-					<li><a href="#">SOTRE</a></li>
-					<li><a href="#">RESPONSIBILITY</a></li>
-					<li><a href="#">MYSTARBUCKS REWARDS</a></li>
-					<li><a href="#">WHAT'S NEW</a></li>
+					<li><a href="http://www.istarbucks.co.kr/coffee/index.do">COFFEE</a></li>
+					<li><a href="http://www.istarbucks.co.kr/menu/index.do">MENU</a></li>
+					<li><a href="#">http://www.istarbucks.co.kr/store/index.do</a></li>
+					<li><a href="#">http://www.istarbucks.co.kr/responsibility/index.do</a></li>
+					<li><a href="#">http://www.istarbucks.co.kr/msr/index.do</a></li>
+					<li><a href="#">http://www.istarbucks.co.kr/whats_new/index.do</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -33,7 +32,9 @@
 	</header><!-- End Header -->
 
 	<section class="billboard">
+		<h2 class="blind">billboard</h2>
 		<section class="caption">
+			<h3 class="caption">caption</h3>
 			<p class="cap_title">Introducing the Starbucks<br>
 														Rewards&trade; Visa&reg; Card</p>
 			<p class="cap_desc">Enjoy more of what you love. Earn stars —that add up to food and drink<br>
@@ -86,7 +87,6 @@
 
 	<section class="recent_work wrapper">
 		<h3 class="S_title">NEW DRINK</h3>
-
 		<div class="work">
 			<a href="#" class="work_img">
 				<img src="img/coffee1.jpg" alt="" title=""/>
@@ -128,6 +128,7 @@
 
 
 	<section class="subscription">
+		<h2 class="blind">subscription</h2>
 		<div class="wrapper">
 			<p class="title">스타벅스에 가입하세요.</p>
 			<p class="desc">가입을 통해 리워드 혜택을 즐기세요.</p>
@@ -138,6 +139,7 @@
 
 
 	<section class="social">
+		<h2 class="blind">social</h2>
 			<a href="http://facebook.com/pixelhint" target="_blank" class="fb"></a>
 			<a href="http://twitter.com/pixelhint" target="_blank" class="t"></a>
 			<a href="http://dribbble.com/pixelhint" target="_blank" class="d"></a>
@@ -147,6 +149,7 @@
 
 
 	<footer>
+		<h2 class="blind">footer</h2>
 		<div class="wrapper">
 			<!-- <div class="f_cols">
 				<h3>Location</h3>
