--- a/starbucks/index.html
+++ b/starbucks/index.html
@@ -16,7 +16,7 @@
 
 	<header>
 		<div class="wrapper">
-			<h1><a href="#" class="logo"><img src="img/logo_star.png" alt="" title="starbucks"/></a></h1>
+			<h1><a href="#" class="logo"><img src="img/logo_star.png" alt="starbucksLogo" title="starbucks"/></a></h1>
 			<nav>
 				<ul>
 					<li><a href="http://www.istarbucks.co.kr/coffee/index.do">COFFEE</a></li>
@@ -191,7 +191,7 @@
 	<div id="lightbox"></div>
 	<div id="box">
 		<a href="" class="close"></a>
-		<form method="" action="">
+		<form>
 			<input type="text" id="email" placeholder="Email"/>
 			<input type="text" id="name" placeholder="Name"/>
 			<input type="submit" id="submit" value="SIGN IN"/>
