--- a/starbucks/index.html
+++ b/starbucks/index.html
@@ -21,10 +21,10 @@
 				<ul>
 					<li><a href="http://www.istarbucks.co.kr/coffee/index.do">COFFEE</a></li>
 					<li><a href="http://www.istarbucks.co.kr/menu/index.do">MENU</a></li>
-					<li><a href="#">http://www.istarbucks.co.kr/store/index.do</a></li>
-					<li><a href="#">http://www.istarbucks.co.kr/responsibility/index.do</a></li>
-					<li><a href="#">http://www.istarbucks.co.kr/msr/index.do</a></li>
-					<li><a href="#">http://www.istarbucks.co.kr/whats_new/index.do</a></li>
+					<li><a href="http://www.istarbucks.co.kr/store/index.do">STORE</a></li>
+					<li><a href="http://www.istarbucks.co.kr/responsibility/index.do">RESPONSIBILITY</a></li>
+					<li><a href="http://www.istarbucks.co.kr/msr/index.do">MY STARBUCKS REWARD</a></li>
+					<li><a href="http://www.istarbucks.co.kr/whats_new/index.do">WHAT'S NEWS</a></li>
 				</ul>
 			</nav>
 		</div>
