--- a/starbucks/index.html
+++ b/starbucks/index.html
@@ -192,9 +192,9 @@
 	<div id="box">
 		<a href="" class="close"></a>
 		<form>
-			<input type="text" id="email" placeholder="Email"/>
-			<input type="text" id="name" placeholder="Name"/>
-			<input type="submit" id="submit" value="SIGN IN"/>
+			<input type="text" id="email" placeholder="Email" title="email"/>
+			<input type="text" id="name" placeholder="Name" title="name"/>
+			<input type="submit" id="submit" value="SIGN IN" title="submit"/>
 			<P><u>JOIN NOW</u></P>
 		</form>
 	</div>
