--- a/starbucks/index.html
+++ b/starbucks/index.html
@@ -16,7 +16,11 @@
 
 	<header>
 		<div class="wrapper">
-			<h1><a href="#" class="logo"><img src="img/logo_star.png" alt="starbucksLogo" title="starbucks"/></a></h1>
+			<h1>
+				<a href="https://jooyeahin.github.io/starbucks/" class="logo">
+					<img src="img/logo_star.png" alt="starbucksLogo" title="starbucks"/>
+				</a>
+			</h1>
 			<nav>
 				<ul>
 					<li><a href="http://www.istarbucks.co.kr/coffee/index.do">COFFEE</a></li>
@@ -40,7 +44,7 @@
 			<p class="cap_desc">Enjoy more of what you love. Earn stars —that add up to food and drink<br>
 			Rewards—everywhere you make purchases.</p>
 
-			<a href="#">LEARN MORE<i></i></a>
+			<a href="http://www.istarbucks.co.kr/msr/scard/scard_gallery.do">LEARN MORE<i></i></a>
 		</section>
 	</section><!-- End billboard -->
 
