--- a/starbucks/index.html
+++ b/starbucks/index.html
@@ -144,11 +144,12 @@
 
 	<section class="social">
 		<h2 class="blind">social</h2>
-			<a href="http://facebook.com/pixelhint" target="_blank" class="fb"></a>
-			<a href="http://twitter.com/pixelhint" target="_blank" class="t"></a>
-			<a href="http://dribbble.com/pixelhint" target="_blank" class="d"></a>
-			<a href="#" target="_blank" class="g"></a>
-	</section><!-- End social -->
+			<a href="https://www.facebook.com/starbuckskorea" target="_blank" class="fb"></a>
+			<a href="https://twitter.com/StarbucksKorea" target="_blank" class="t"></a>
+			<a href="https://www.youtube.com/user/starbuckskorea" target="_blank" class="d"></a>
+			<a href="https://www.google.com/" target="_blank" class="g"></a>
+	</section>
+	<!-- End social -->
 
 
 
