--- a/starbucks/index.html
+++ b/starbucks/index.html
@@ -136,7 +136,7 @@
 		<div class="wrapper">
 			<p class="title">스타벅스에 가입하세요.</p>
 			<p class="desc">가입을 통해 리워드 혜택을 즐기세요.</p>
-			<a href="" class="start_btn">SIGN IN</a>
+			<a href="https://www.istarbucks.co.kr/login/login.do" class="start_btn">SIGN IN</a>
 		</div>
 	</section><!-- End subscription -->
 
@@ -156,36 +156,7 @@
 	<footer>
 		<h2 class="blind">footer</h2>
 		<div class="wrapper">
-			<!-- <div class="f_cols">
-				<h3>Location</h3>
-				<p>1401 South Grand Avenue Los Angeles, CA 90015 <span class="phone">(213) 748-2411</span></p>
-				<a href="#" class="map">see it in the map <span class="arrow">&nbsp;&rarr;</span></a>
-			</div>
-
-			<div class="f_cols">
-				<h3>Company</h3>
-				<ul>
-					<li><a href="#">Our Story</a></li>
-					<li><a href="#">Mission</a></li>
-					<li><a href="#">Journal</a></li>
-					<li><a href="#">Careers</a></li>
-				</ul>
-			</div>
-
-			<div class="f_cols">
-				<h3>Support</h3>
-				<ul>
-					<li><a href="#">FAQ</a></li>
-					<li><a href="#">Contact Us</a></li>
-					<li><a href="#">Policies</a></li>
-				</ul>
-			</div>
-
-			<div class="f_cols">
-				<h3>Minima.</h3>
-				<p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-				<p>Template made by <a href="http://pixelhint.com" target="_blank">pixelhint.com</a></p>
-			</div> -->
+			
 			<p>사업자등록번호 201-81-21515 (주)스타벅스커피 코리아 대표이사 이석구 TEL : 02) 3015-1100 / FAX : 02) 3015-1106 개인정보 책임자 : 강기원
 			</p>
 			<p>&copy; 2015 Starbucks Coffee Company. All Rights Reserved.</p>
