--- a/starbucks/index.html
+++ b/starbucks/index.html
@@ -144,10 +144,10 @@
 
 	<section class="social">
 		<h2 class="blind">social</h2>
-			<a href="https://www.facebook.com/starbuckskorea" target="_blank" class="fb"></a>
-			<a href="https://twitter.com/StarbucksKorea" target="_blank" class="t"></a>
-			<a href="https://www.youtube.com/user/starbuckskorea" target="_blank" class="d"></a>
-			<a href="https://www.google.com/" target="_blank" class="g"></a>
+			<a href="https://www.facebook.com/starbuckskorea" target="_blank" class="fb"><span class="blank">facebook</span></a>
+			<a href="https://twitter.com/StarbucksKorea" target="_blank" class="t"><span class="blank">twitter</span></a>
+			<a href="https://www.youtube.com/user/starbuckskorea" target="_blank" class="d"><span class="blank">youtube</span></a>
+			<a href="https://www.google.com/" target="_blank" class="g"><span class="blank">google</span></a>
 	</section>
 	<!-- End social -->
 
@@ -156,7 +156,7 @@
 	<footer>
 		<h2 class="blind">footer</h2>
 		<div class="wrapper">
-			
+
 			<p>사업자등록번호 201-81-21515 (주)스타벅스커피 코리아 대표이사 이석구 TEL : 02) 3015-1100 / FAX : 02) 3015-1106 개인정보 책임자 : 강기원
 			</p>
 			<p>&copy; 2015 Starbucks Coffee Company. All Rights Reserved.</p>
