--- a/Allegorithmic/Allegorithmic.html
+++ b/Allegorithmic/Allegorithmic.html
@@ -16,7 +16,7 @@
   <header>
     <div class="wrapper">
       <h1>
-        <a href="Allegorithmic.html"><img src="img/AllegorithmicAdobeWhite_1.png" alt="Allegorithmic logo"></a>
+        <a href="index.html"><img src="img/AllegorithmicAdobeWhite_1.png" alt="Allegorithmic logo"></a>
         <span class="blind">Allegorithmic</span>
       </h1>
       <ul>
