--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Sarabun" rel="stylesheet">
   <link rel="stylesheet" href="css/grid.css">
   <link rel="stylesheet" href="css/index.css">
-  <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+  <script src="jg/jquery-3.3.1.min.js"></script>
   <script src="js/index.js"></script>
 </head>
 <body>
