--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -19,12 +19,12 @@
     <div class="wrapper">
       <ul class="menubar">
         <li>
-          <h1><a href=""><img src="img/Untitled-2_1.png" alt="logo"></a><span class="blind">Dev.ACKACK</span></h1>
+          <h1><a href="" onclick="return false"><img src="img/Untitled-2_1.png" alt="logo"></a><span class="blind">Dev.ACKACK</span></h1>
         </li>
-        <li><a href="">Home</a></li>
-        <li><a href="portfolio">Portfolio</a></li>
-        <li><a href="">About</a></li>
-        <li><a href="">Contact</a></li>
+        <li><a href="" onclick="return false">Home</a></li>
+        <li><a href="" onclick="return false">Portfolio</a></li>
+        <li><a href="" onclick="return false">About</a></li>
+        <li><a href="" onclick="return false">Contact</a></li>
       </ul>
     </div>
   </header>
