--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -253,7 +253,7 @@
             <p>Write us an e-mail via the form, or just send us an e-mail directly at</p>
             <a href="">jooyeahin@naver.com</a>
             <a href="">010-7114-6223</a>
-            <h3>Our Address.</h3>
+            <h3>Address.</h3>
             <p>Suwon-si, Gyeonggi-do, Republic of Korea</p>
           </li>
           <li class="col-7">
