--- a/nikon/index.html
+++ b/nikon/index.html
@@ -20,7 +20,7 @@
       <!--  로케이션, 랭귀지 드롭다운메뉴  -->
       <ul class="drop-down">
         <li>
-          <a href="#">USA<i></i></a>
+          <a href="#" onclick="return false">USA<i></i></a>
           <ul>
             <li><a href="#">AUSTRAILA</a></li>
             <li><a href="#">CANADA</a></li>
@@ -40,7 +40,7 @@
           </ul>
         </li>
         <li>
-          <a href="#">ENGLISH<i></i></a>
+          <a href="#" onclick="return false">ENGLISH<i></i></a>
           <ul>
             <li><a href="#">ENGLISH</a></li>
             <li><a href="#">ESPANOL</a></li>
