--- a/nikon/index.html
+++ b/nikon/index.html
@@ -22,29 +22,29 @@
         <li>
           <a href="#" onclick="return false">USA<i></i></a>
           <ul>
-            <li><a href="#">AUSTRAILA</a></li>
-            <li><a href="#">CANADA</a></li>
-            <li><a href="#">DEUTSCHLAND</a></li>
-            <li><a href="#">ESPANA</a></li>
-            <li><a href="#">FRANCE</a></li>
-            <li><a href="#">ITALIA</a></li>
-            <li><a href="#">JAPAN</a></li>
-            <li><a href="#">OSTERREICH</a></li>
-            <li><a href="#">RUSSIA</a></li>
-            <li><a href="#">SUISSE</a></li>
-            <li><a href="#">UNITED KINGDOM</a></li>
-            <li><a href="#">USA</a></li>
-            <li><a href="#">KOREA</a></li>
-            <li><a href="#">CHINA</a></li>
-            <li><a href="#">OTHERS</a></li>
+            <li><a href="#" onclick="return false">AUSTRAILA</a></li>
+            <li><a href="#" onclick="return false">CANADA</a></li>
+            <li><a href="#" onclick="return false">DEUTSCHLAND</a></li>
+            <li><a href="#" onclick="return false">ESPANA</a></li>
+            <li><a href="#" onclick="return false">FRANCE</a></li>
+            <li><a href="#" onclick="return false">ITALIA</a></li>
+            <li><a href="#" onclick="return false">JAPAN</a></li>
+            <li><a href="#" onclick="return false">OSTERREICH</a></li>
+            <li><a href="#" onclick="return false">RUSSIA</a></li>
+            <li><a href="#" onclick="return false">SUISSE</a></li>
+            <li><a href="#" onclick="return false">UNITED KINGDOM</a></li>
+            <li><a href="#" onclick="return false">USA</a></li>
+            <li><a href="#" onclick="return false">KOREA</a></li>
+            <li><a href="#" onclick="return false">CHINA</a></li>
+            <li><a href="#" onclick="return false">OTHERS</a></li>
           </ul>
         </li>
         <li>
           <a href="#" onclick="return false">ENGLISH<i></i></a>
           <ul>
-            <li><a href="#">ENGLISH</a></li>
-            <li><a href="#">ESPANOL</a></li>
-            <li><a href="#">CHINA</a></li>
+            <li><a href="#" onclick="return false">ENGLISH</a></li>
+            <li><a href="#" onclick="return false">ESPANOL</a></li>
+            <li><a href="#" onclick="return false">CHINA</a></li>
           </ul>
         </li>
       </ul>
