--- a/nikon/index.html
+++ b/nikon/index.html
@@ -20,38 +20,38 @@
       <!--  로케이션, 랭귀지 드롭다운메뉴  -->
       <ul class="drop-down">
         <li>
-          <a href="#" onclick="return false">USA<i></i></a>
+          <a href="#">USA<i></i></a>
           <ul>
-            <li><a href="#" onclick="return false">AUSTRAILA</a></li>
-            <li><a href="#" onclick="return false">CANADA</a></li>
-            <li><a href="#" onclick="return false">DEUTSCHLAND</a></li>
-            <li><a href="#" onclick="return false">ESPANA</a></li>
-            <li><a href="#" onclick="return false">FRANCE</a></li>
-            <li><a href="#" onclick="return false">ITALIA</a></li>
-            <li><a href="#" onclick="return false">JAPAN</a></li>
-            <li><a href="#" onclick="return false">OSTERREICH</a></li>
-            <li><a href="#" onclick="return false">RUSSIA</a></li>
-            <li><a href="#" onclick="return false">SUISSE</a></li>
-            <li><a href="#" onclick="return false">UNITED KINGDOM</a></li>
-            <li><a href="#" onclick="return false">USA</a></li>
-            <li><a href="#" onclick="return false">KOREA</a></li>
-            <li><a href="#" onclick="return false">CHINA</a></li>
-            <li><a href="#" onclick="return false">OTHERS</a></li>
+            <li><a href="#">AUSTRAILA</a></li>
+            <li><a href="#">CANADA</a></li>
+            <li><a href="#">DEUTSCHLAND</a></li>
+            <li><a href="#">ESPANA</a></li>
+            <li><a href="#">FRANCE</a></li>
+            <li><a href="#">ITALIA</a></li>
+            <li><a href="#">JAPAN</a></li>
+            <li><a href="#">OSTERREICH</a></li>
+            <li><a href="#">RUSSIA</a></li>
+            <li><a href="#">SUISSE</a></li>
+            <li><a href="#">UNITED KINGDOM</a></li>
+            <li><a href="#">USA</a></li>
+            <li><a href="#">KOREA</a></li>
+            <li><a href="#">CHINA</a></li>
+            <li><a href="#">OTHERS</a></li>
           </ul>
         </li>
         <li>
-          <a href="#" onclick="return false">ENGLISH<i></i></a>
+          <a href="#">ENGLISH<i></i></a>
           <ul>
-            <li><a href="#" onclick="return false">ENGLISH</a></li>
-            <li><a href="#" onclick="return false">ESPANOL</a></li>
-            <li><a href="#" onclick="return false">CHINA</a></li>
+            <li><a href="#">ENGLISH</a></li>
+            <li><a href="#">ESPANOL</a></li>
+            <li><a href="#">CHINA</a></li>
           </ul>
         </li>
       </ul>
       <!--  로고 및 아이콘메뉴  -->
       <div class="top-area">
         <h1>
-          <a href="nikon.html">
+          <a href="index.html">
             <img src="img/nikonlogo.png" alt="Nikon">
           </a>
         </h1>
@@ -79,48 +79,48 @@
       <nav class="wrapper">
         <ul class="gnb">
           <li>
-            <a href="#"><img src="img/depth2_icon1_1.png" alt="" class="m">CAMERAS</a>
+            <a href="#" onclick="return false"><img src="img/depth2_icon1_1.png" alt="" class="m">CAMERAS</a>
             <div class="gnb-back">
               <ul>
-                <li><a href="#">DSLR CAMERA</a></li>
-                <li><a href="#">MIRRORLESS</a></li>
-                <li><a href="#">POINT SHOOT</a></li>
-                <li><a href="#">ACTION CAM</a></li>
-                <li><a href="#">FILM CAMERA</a></li>
+                <li><a href="#" onclick="return false">DSLR CAMERA</a></li>
+                <li><a href="#" onclick="return false">MIRRORLESS</a></li>
+                <li><a href="#" onclick="return false">POINT SHOOT</a></li>
+                <li><a href="#" onclick="return false">ACTION CAM</a></li>
+                <li><a href="#" onclick="return false">FILM CAMERA</a></li>
               </ul>
               <div class="nav-banner">
-                <a href="#"><img src="img/Untitled-5.jpg" alt=""></a>
+                <a href="#" onclick="return false"><img src="img/Untitled-5.jpg" alt=""></a>
               </div>
             </div>
           </li>
           <li>
-            <a href="#"><img src="img/depth2_icon2.png" alt="" class="m">LENSES</a>
+            <a href="#" onclick="return false"><img src="img/depth2_icon2.png" alt="" class="m">LENSES</a>
             <div class="gnb-back">
               <ul>
-                <li><a href="#">DSLR LENS</a></li>
-                <li><a href="#">MIRRORLESS LENS</a></li>
+                <li><a href="#" onclick="return false">DSLR LENS</a></li>
+                <li><a href="#" onclick="return false">MIRRORLESS LENS</a></li>
               </ul>
               <div class="nav-banner">
-                <a href="#"><img src="img/promonikon12918.jpg" alt=""></a>
+                <a href="#" onclick="return false"><img src="img/promonikon12918.jpg" alt=""></a>
               </div>
             </div>
           </li>
           <li>
-            <a href="#"><img src="img/depth2_icon3.png" alt="" class="m">FLASHES</a>
+            <a href="#" onclick="return false"><img src="img/depth2_icon3.png" alt="" class="m">FLASHES</a>
           </li>
           <li>
-            <a href="#"><img src="img/depth2_icon4.png" alt="" class="m">ACCESSORIES</a>
+            <a href="#" onclick="return false"><img src="img/depth2_icon4.png" alt="" class="m">ACCESSORIES</a>
             <div class="gnb-back">
               <ul>
-                <li><a href="#">DSLR ACCESSORIES</a></li>
-                <li><a href="#">MIRRORLESS ACCESSORIES</a></li>
-                <li><a href="#">DSLR LENS ACCESSORIES</a></li>
-                <li><a href="#">MIRRORLESS LENS ACCESSORIES</a></li>
-                <li><a href="#">FLASH ACCESSORIES</a></li>
-                <li><a href="#">POINT SHOOT ACCESSORIES</a></li>
+                <li><a href="#" onclick="return false">DSLR ACCESSORIES</a></li>
+                <li><a href="#" onclick="return false">MIRRORLESS ACCESSORIES</a></li>
+                <li><a href="#" onclick="return false">DSLR LENS ACCESSORIES</a></li>
+                <li><a href="#" onclick="return false">MIRRORLESS LENS ACCESSORIES</a></li>
+                <li><a href="#" onclick="return false">FLASH ACCESSORIES</a></li>
+                <li><a href="#" onclick="return false">POINT SHOOT ACCESSORIES</a></li>
               </ul>
               <div class="nav-banner">
-                <a href="#"><img src="img/Best Nikon D750 Accessories.jpg" alt=""></a>
+                <a href="#" onclick="return false"><img src="img/Best Nikon D750 Accessories.jpg" alt=""></a>
               </div>
             </div>
           </li>
@@ -132,11 +132,11 @@
           <div class="depth2-wrapper">
             <div class="swiper-container depth2">
               <div class="swiper-wrapper">
-                <div class="swiper-slide"><a href="#">DSLR CAMERA</a></div>
-                <div class="swiper-slide"><a href="#">MIRRORLESS</a></div>
-                <div class="swiper-slide"><a href="#">POINTSHOOT</a></div>
-                <div class="swiper-slide"><a href="#">ACTION CAM</a></div>
-                <div class="swiper-slide"><a href="#">FILM CAMERA</a></div>
+                <div class="swiper-slide"><a href="#" onclick="return false">DSLR CAMERA</a></div>
+                <div class="swiper-slide"><a href="#" onclick="return false">MIRRORLESS</a></div>
+                <div class="swiper-slide"><a href="#" onclick="return false">POINTSHOOT</a></div>
+                <div class="swiper-slide"><a href="#" onclick="return false">ACTION CAM</a></div>
+                <div class="swiper-slide"><a href="#" onclick="return false">FILM CAMERA</a></div>
               </div>
             </div>
           </div>
