--- a/nikon/index.html
+++ b/nikon/index.html
@@ -252,7 +252,7 @@
               <img src="img/m_banner4.jpg" alt="" class="m">
               <div class="text-box">
                 <span>DISCOVER</span>
-                <strong><span>NIKON </span>AT THE CES 2019</strong>
+                <strong><span><i>Nikon</i> </span>AT THE CES 2019</strong>
                 <button class="link-btn">MEET THE CES 2019</button>
               </div>
             </div>
@@ -261,7 +261,7 @@
               <img src="img/m_banner1.jpg" alt="" class="m">
               <div class="text-box">
                 <span>DISCOVER</span>
-                <strong>THE NEW PERSPECTIVE <span>NIKON D850</span></strong>
+                <strong>THE NEW PERSPECTIVE <span><i>Nikon</i> D850</span></strong>
                 <button class="link-btn">MEET THE D850</button>
               </div>
             </div>
@@ -270,7 +270,7 @@
               <img src="img/m_banner2.jpg" alt="" class="m">
               <div class="text-box">
                 <span>DISCOVER</span>
-                <strong>VISION OUTPERFORMED <span>NIKON D3X</span></strong>
+                <strong>VISION OUTPERFORMED <span><i>Nikon</i> D3X</span></strong>
                 <button class="link-btn">MEET THE D3X</button>
               </div>
             </div>
@@ -349,7 +349,7 @@
           <div>
             <div class="product-textbox">
               <p>Create without limit.</p>
-              <strong>Nikon</strong>
+              <strong><i>Nikon</i></strong>
               <button>MORE VIEW</button>
             </div>
             <img src="img/nikokn-zseries.jpg" alt="Zseries">
