--- a/nikon/index.html
+++ b/nikon/index.html
@@ -20,31 +20,31 @@
       <!--  로케이션, 랭귀지 드롭다운메뉴  -->
       <ul class="drop-down">
         <li>
-          <a href="#">USA<i></i></a>
+          <a href="#" onclick="return false">USA<i></i></a>
           <ul>
-            <li><a href="#">AUSTRAILA</a></li>
-            <li><a href="#">CANADA</a></li>
-            <li><a href="#">DEUTSCHLAND</a></li>
-            <li><a href="#">ESPANA</a></li>
-            <li><a href="#">FRANCE</a></li>
-            <li><a href="#">ITALIA</a></li>
-            <li><a href="#">JAPAN</a></li>
-            <li><a href="#">OSTERREICH</a></li>
-            <li><a href="#">RUSSIA</a></li>
-            <li><a href="#">SUISSE</a></li>
-            <li><a href="#">UNITED KINGDOM</a></li>
-            <li><a href="#">USA</a></li>
-            <li><a href="#">KOREA</a></li>
-            <li><a href="#">CHINA</a></li>
-            <li><a href="#">OTHERS</a></li>
+            <li><a href="#" onclick="return false">AUSTRAILA</a></li>
+            <li><a href="#" onclick="return false">CANADA</a></li>
+            <li><a href="#" onclick="return false">DEUTSCHLAND</a></li>
+            <li><a href="#" onclick="return false">ESPANA</a></li>
+            <li><a href="#" onclick="return false">FRANCE</a></li>
+            <li><a href="#" onclick="return false">ITALIA</a></li>
+            <li><a href="#" onclick="return false">JAPAN</a></li>
+            <li><a href="#" onclick="return false">OSTERREICH</a></li>
+            <li><a href="#" onclick="return false">RUSSIA</a></li>
+            <li><a href="#" onclick="return false">SUISSE</a></li>
+            <li><a href="#" onclick="return false">UNITED KINGDOM</a></li>
+            <li><a href="#" onclick="return false">USA</a></li>
+            <li><a href="#" onclick="return false">KOREA</a></li>
+            <li><a href="#" onclick="return false">CHINA</a></li>
+            <li><a href="#" onclick="return false">OTHERS</a></li>
           </ul>
         </li>
         <li>
-          <a href="#">ENGLISH<i></i></a>
+          <a href="#" onclick="return false">ENGLISH<i></i></a>
           <ul>
-            <li><a href="#">ENGLISH</a></li>
-            <li><a href="#">ESPANOL</a></li>
-            <li><a href="#">CHINA</a></li>
+            <li><a href="#" onclick="return false">ENGLISH</a></li>
+            <li><a href="#" onclick="return false">ESPANOL</a></li>
+            <li><a href="#" onclick="return false">CHINA</a></li>
           </ul>
         </li>
       </ul>
@@ -69,9 +69,9 @@
         </div>
 
         <ul class="util-nav util-nav2">
-          <li><a href="#" class="icon icon-bag"><span class="blind">장바구니</span></a></li>
-          <li><a href="#" class="icon icon-login"><span class="blind">로그인</span></a></li>
-          <li><a href="#" class="icon icon-heart"><span class="blind">찜하기</span></a></li>
+          <li><a href="#" class="icon icon-bag" onclick="return false"><span class="blind">장바구니</span></a></li>
+          <li><a href="#" class="icon icon-login" onclick="return false"><span class="blind">로그인</span></a></li>
+          <li><a href="#" class="icon icon-heart" onclick="return false"><span class="blind">찜하기</span></a></li>
         </ul>
       </div>
 
@@ -298,43 +298,43 @@
         <div class="swiper-container">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
-              <a href=""><img src="img/1542_D810_front.png" alt=""></a>
+              <a href="" onclick="return false"><img src="img/1542_D810_front.png" alt=""></a>
               <p class="product-text"><span>FX Series Camera</span> NIKON D810</p>
             </div>
             <div class="swiper-slide">
-              <a href=""><img src="img/1557_D5_front.png" alt=""></a>
+              <a href="" onclick="return false"><img src="img/1557_D5_front.png" alt=""></a>
               <p class="product-text"><span>FX Series Camera</span> NIKON New D5</p>
             </div>
             <div class="swiper-slide">
-              <a href=""><img src="img/1581_D7500_front.png" alt=""></a>
+              <a href="" onclick="return false"><img src="img/1581_D7500_front.png" alt=""></a>
               <p class="product-text"><span>DX Series Camera</span> NIKON D7500</p>
             </div>
             <div class="swiper-slide">
-              <a href=""><img src="img/1585_D850_front.png" alt=""></a>
+              <a href="" onclick="return false"><img src="img/1585_D850_front.png" alt=""></a>
               <p class="product-text"><span>FX Series Camera</span> NIKON D850</p>
             </div>
             <div class="swiper-slide">
-              <a href=""><img src="img/1591_Z7_front.png" alt=""></a>
+              <a href="" onclick="return false"><img src="img/1591_Z7_front.png" alt=""></a>
               <p class="product-text"><span>Fullframe Mirroless</span> NIKON Z7</p>
             </div>
             <div class="swiper-slide">
-              <a href=""><img src="img/1689_FM10_front.png" alt=""></a>
+              <a href="" onclick="return false"><img src="img/1689_FM10_front.png" alt=""></a>
               <p class="product-text"><span>New Film Camera</span> NIKON FM10</p>
             </div>
             <div class="swiper-slide">
-              <a href=""><img src="img/2181_AF-S-DX-Zoom-NIKKOR-10-24mm-f-3.5-4.5G-ED_front.png" alt=""></a>
+              <a href="" onclick="return false"><img src="img/2181_AF-S-DX-Zoom-NIKKOR-10-24mm-f-3.5-4.5G-ED_front.png" alt=""></a>
               <p class="product-text"><span>DX DSLR Lens</span> Nikkor 10-24mm</p>
             </div>
             <div class="swiper-slide">
-              <a href=""><img src="img/4193-HB-89-Bayonet-Lens-Hood.png" alt=""></a>
+              <a href="" onclick="return false"><img src="img/4193-HB-89-Bayonet-Lens-Hood.png" alt=""></a>
               <p class="product-text"><span>DSLR Accessories</span> DSLR Hood</p>
             </div>
             <div class="swiper-slide">
-              <a href=""><img src="img/11858_Extended_Service_Coverage_2_Years_D800.png" alt=""></a>
+              <a href="" onclick="return false"><img src="img/11858_Extended_Service_Coverage_2_Years_D800.png" alt=""></a>
               <p class="product-text"><span>NIKON COVERAGE </span>2YEAR SERVICE</p>
             </div>
             <div class="swiper-slide">
-              <a href=""><img src="img/20066-AF-S-FISHEYE-NIKKOR-8-15mm.png" alt=""></a>
+              <a href="" onclick="return false"><img src="img/20066-AF-S-FISHEYE-NIKKOR-8-15mm.png" alt=""></a>
               <p class="product-text"><span>AFS DSLR Lens</span> Nikkor 8-15mm </p>
             </div>
           </div>
@@ -345,7 +345,7 @@
       </div>
       <div class="wrapper">
         <div class="product-2">
-          <a href="#"><img src="img/marketing-hero-D5600.jpg" alt="D5600"></a>
+          <a href="#" onclick="return false"><img src="img/marketing-hero-D5600.jpg" alt="D5600"></a>
           <div>
             <div class="product-textbox">
               <p>Create without limit.</p>
@@ -517,7 +517,7 @@
 
         <ul>
           <li class="col-lg-3 col-md-6 col-sm-6">
-            <div><a href=""><img src="img/news1.jpg" alt="D3500"></a></div>
+            <div><a href="" onclick="return false"><img src="img/news1.jpg" alt="D3500"></a></div>
             <h3>Nikon releases the D3500 digital SLR camera</h3>
             <p>
               The D3500 has an effective pixel count of 24.2 megapixels,
@@ -525,7 +525,7 @@
             </p>
           </li>
           <li class="col-lg-3 col-md-6 col-sm-6">
-            <div><a href=""><img src="img/news2.jpg" alt="EISA"></a></div>
+            <div><a href="" onclick="return false"><img src="img/news2.jpg" alt="EISA"></a></div>
             <h3>
               Two Nikon Products Receive the EISA Awards:
               the Nikon D850 and AF-S NIKKOR 180-400mm
@@ -538,7 +538,7 @@
             </p>
           </li>
           <li class="col-lg-3 col-md-6 col-sm-6">
-            <div><a href=""><img src="img/news3.jpg" alt="championship"></a></div>
+            <div><a href="" onclick="return false"><img src="img/news3.jpg" alt="championship"></a></div>
             <h3>
               Nikon to Support “The 147th Open Championship”
             </h3>
@@ -548,7 +548,7 @@
             </p>
           </li>
           <li class="col-lg-3 col-md-6 col-sm-6">
-            <div><a href=""><img src="img/news4.jpg" alt="reddot"></a></div>
+            <div><a href="" onclick="return false"><img src="img/news4.jpg" alt="reddot"></a></div>
             <h3>
               The Nikon D850 and Nikon D7500 — receive the "Red Dot Award:
               Product Design 2018"
@@ -589,54 +589,54 @@
       <div class="wrapper">
         <h2>FOLLOW NIKON</h2>
         <ul class="sns">
-          <li><a href="#"><i class="icon icon-facebook"></i><span class="blind">facebook</span></a></li>
-          <li><a href="#"><i class="icon icon-twitter"></i><span class="blind">twitter</span></a></li>
-          <li><a href="#"><i class="icon icon-youtube"></i><span class="blind">youtube</span></a></li>
-          <li><a href="#"><i class="icon icon-pinterest"></i><span class="blind">pinterest</span></a></li>
-          <li><a href="#"><i class="icon icon-instagram"></i><span class="blind">instagram</span></a></li>
+          <li><a href="#" onclick="return false"><i class="icon icon-facebook"></i><span class="blind">facebook</span></a></li>
+          <li><a href="#" onclick="return false"><i class="icon icon-twitter"></i><span class="blind">twitter</span></a></li>
+          <li><a href="#" onclick="return false"><i class="icon icon-youtube"></i><span class="blind">youtube</span></a></li>
+          <li><a href="#" onclick="return false"><i class="icon icon-pinterest"></i><span class="blind">pinterest</span></a></li>
+          <li><a href="#" onclick="return false"><i class="icon icon-instagram"></i><span class="blind">instagram</span></a></li>
         </ul>
         <ul class="accordion">
           <li class="col-lg-3 col-md-6 col-sm-6">
-            <a href="#">About Nikon <i></i></a>
+            <a href="#" onclick="return false">About Nikon <i></i></a>
             <ul class="footer-accordion">
-              <li><a href="">Press Room</a></li>
-              <li><a href="">Careers</a></li>
-              <li><a href="">Corporate Social Responsibility</a></li>
-              <li><a href="">Sponsorship Requests</a></li>
-              <li><a href="">Corporate Profile</a></li>
-              <li><a href="">Nikon Ambassadors</a></li>
-              <li><a href="">Events</a></li>
-              <li><a href="">Contact Us</a></li>
+              <li><a href="#" onclick="return false">Press Room</a></li>
+              <li><a href="#" onclick="return false">Careers</a></li>
+              <li><a href="#" onclick="return false">Corporate Social Responsibility</a></li>
+              <li><a href="#" onclick="return false">Sponsorship Requests</a></li>
+              <li><a href="#" onclick="return false">Corporate Profile</a></li>
+              <li><a href="#" onclick="return false">Nikon Ambassadors</a></li>
+              <li><a href="#" onclick="return false">Events</a></li>
+              <li><a href="#" onclick="return false">Contact Us</a></li>
             </ul>
           </li>
           <li class="col-lg-3 col-md-6 col-sm-6">
-            <a href="#">Tools & Downloads<i></i></a>
+            <a href="#" onclick="return false">Tools & Downloads<i></i></a>
             <ul class="footer-accordion">
-              <li><a href="">Nikon Camera Apps</a></li>
-              <li><a href="">manuals</a></li>
-              <li><a href="">Software & Firmware Updates</a></li>
-              <li><a href="">Nikon Image Space</a></li>
-              <li><a href="">Download Adobe Reader</a></li>
+              <li><a href="#" onclick="return false">Nikon Camera Apps</a></li>
+              <li><a href="#" onclick="return false">manuals</a></li>
+              <li><a href="#" onclick="return false">Software & Firmware Updates</a></li>
+              <li><a href="#" onclick="return false">Nikon Image Space</a></li>
+              <li><a href="#" onclick="return false">Download Adobe Reader</a></li>
             </ul>
           </li>
           <li class="col-lg-3 col-md-6 col-sm-6">
-            <a href="#">Shopping Help<i></i></a>
+            <a href="#" onclick="return false">Shopping Help<i></i></a>
             <ul class="footer-accordion">
-              <li><a href="">Shopping FAQ</a></li>
-              <li><a href="">Order Status</a></li>
-              <li><a href="">Returns</a></li>
-              <li><a href="">Nikon Authorized Dealers (PDF)</a></li>
-              <li><a href="">Gray Market Warning</a></li>
+              <li><a href="#" onclick="return false">Shopping FAQ</a></li>
+              <li><a href="#" onclick="return false">Order Status</a></li>
+              <li><a href="#" onclick="return false">Returns</a></li>
+              <li><a href="#" onclick="return false">Nikon Authorized Dealers (PDF)</a></li>
+              <li><a href="#" onclick="return false">Gray Market Warning</a></li>
             </ul>
           </li>
           <li class="col-lg-3 col-md-6 col-sm-6">
-            <a href="#">Policies & Warraties<i></i></a>
+            <a href="#" onclick="return false">Policies & Warraties<i></i></a>
             <ul class="footer-accordion">
-              <li><a href="">Privacy Policy</a></li>
-              <li><a href="">Shipping Policy</a></li>
-              <li><a href="">Warranties</a></li>
-              <li><a href="">Terms of Sale</a></li>
-              <li><a href="">Terms of Use</a></li>
+              <li><a href="#" onclick="return false">Privacy Policy</a></li>
+              <li><a href="#" onclick="return false">Shipping Policy</a></li>
+              <li><a href="#" onclick="return false">Warranties</a></li>
+              <li><a href="#" onclick="return false">Terms of Sale</a></li>
+              <li><a href="#" onclick="return false">Terms of Use</a></li>
             </ul>
           </li>
         </ul>
@@ -645,9 +645,9 @@
     <div class="footer-bottom">
       <div class="wrapper">
         <div>
-          <a href="">Nikon Americas</a>
-          <a href="">Nikon Global</a>
-          <a href="">Sitemap</a>
+          <a href="#" onclick="return false">Nikon Americas</a>
+          <a href="#" onclick="return false">Nikon Global</a>
+          <a href="#" onclick="return false">Sitemap</a>
         </div>
         <div>&copy; 2019 Nikon Inc.</div>
       </div>
