--- a/nikon/index.html
+++ b/nikon/index.html
@@ -89,7 +89,7 @@
                 <li><a href="#" onclick="return false">FILM CAMERA</a></li>
               </ul>
               <div class="nav-banner">
-                <a href="#" onclick="return false"><img src="img/Untitled-5.jpg" alt=""></a>
+                <a href="#" onclick="return false"><img src="img/Untitled-5.jpg" alt=""><span class="blind">banner</span></a>
               </div>
             </div>
           </li>
@@ -330,11 +330,11 @@
               <p class="product-text"><span>DSLR Accessories</span> DSLR Hood</p>
             </div>
             <div class="swiper-slide">
-              <a href="" onclick="return false"><img src="img/11858_Extended_Service_Coverage_2_Years_D800.png" alt=""></a>
+              <a href="" onclick="return false"><img src="img/11858_Extended_Service_Coverage_2_Years_D800.png" alt="d800"></a>
               <p class="product-text"><span>NIKON COVERAGE </span>2YEAR SERVICE</p>
             </div>
             <div class="swiper-slide">
-              <a href="" onclick="return false"><img src="img/20066-AF-S-FISHEYE-NIKKOR-8-15mm.png" alt=""></a>
+              <a href="" onclick="return false"><img src="img/20066-AF-S-FISHEYE-NIKKOR-8-15mm.png" alt="nikkor-8-15mm"></a>
               <p class="product-text"><span>AFS DSLR Lens</span> Nikkor 8-15mm </p>
             </div>
           </div>
@@ -345,7 +345,7 @@
       </div>
       <div class="wrapper">
         <div class="product-2">
-          <a href="#" onclick="return false"><img src="img/marketing-hero-D5600.jpg" alt="D5600"></a>
+          <a href="#" onclick="return false"><img src="img/marketing-hero-D5600.jpg" alt="D5600"><span class="blind">d5600banner</span></a>
           <div>
             <div class="product-textbox">
               <p>Create without limit.</p>
