--- a/nikon1/index.html
+++ b/nikon1/index.html
@@ -243,10 +243,10 @@
   <!--  section > article  -->
   <section>
     <article class="main-banner">
-
+      <p class="sign"></p>
     </article>
 
-    
+
 
 
 </body>
